--- a/web/summerjob/package.json
+++ b/web/summerjob/package.json
@@ -22,7 +22,8 @@
     "react-dom": "18.2.0",
     "swr": "^2.0.0",
     "ts-node": "^10.9.1",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
