--- a/web/summerjob/package.json
+++ b/web/summerjob/package.json
@@ -10,6 +10,7 @@
     "seed": "ts-node --skip-project prisma/seed.ts"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.10",
     "@next/font": "13.0.7",
     "@prisma/client": "^4.8.0",
     "@types/node": "18.11.17",
@@ -20,6 +21,7 @@
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.41.3",
     "swr": "^2.0.0",
     "ts-node": "^10.9.1",
     "typescript": "4.9.4",
