--- a/web/summerjob/package.json
+++ b/web/summerjob/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.41.3",
+    "sharp": "^0.31.3",
     "swr": "^2.0.0",
     "ts-node": "^10.9.1",
     "typescript": "4.9.4",
