Login and logout

--- a/web/summerjob/.env.sample
+++ b/web/summerjob/.env.sample
@@ -5,3 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://username:password@summerjob-db:5432/summerjob?schema=public"
+EMAIL_SERVER=smtps://username:password@smtp.example.cz:465
+EMAIL_FROM=username@example.cz
+NEXTAUTH_URL="Webserver URL (domain for production, localhost for development)"
+NEXTAUTH_SECRET="A random string used to hash tokens, sign/encrypt cookies and generate cryptographic keys. It should be at least 32 characters long."
