--- a/web/summerjob/package.json
+++ b/web/summerjob/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
+    "@next-auth/prisma-adapter": "^1.0.5",
     "@next/font": "13.0.7",
     "@prisma/client": "^4.11.0",
     "@types/node": "18.11.17",
@@ -20,6 +21,8 @@
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
     "next": "^13.2.4",
+    "next-auth": "^4.20.1",
+    "nodemailer": "^6.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.41.3",
