--- a/planner/package.json
+++ b/planner/package.json
@@ -2,10 +2,10 @@
   "name": "summerjob-planner",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "receive.js",
   "scripts": {
-    "start": "ts-node src/index.ts",
-    "send": "ts-node src/send.ts",
+    "start": "ts-node-esm src/receive.ts",
+    "send": "ts-node-esm src/send.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -20,6 +20,5 @@
     "prisma": "^4.11.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.2"
-  },
-  "type": "module"
+  }
 }
