--- a/planner/package.json
+++ b/planner/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "ts-node-esm src/receive.ts",
     "send": "ts-node-esm src/send.ts",
+    "run": "ts-node-esm src/run.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
