--- a/web/summerjob/package.json
+++ b/web/summerjob/package.json
@@ -15,9 +15,11 @@
     "@hookform/resolvers": "^2.9.10",
     "@next/font": "13.0.7",
     "@prisma/client": "^4.11.0",
+    "@types/amqplib": "^0.10.1",
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "amqplib": "^0.10.3",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
     "next": "^13.2.4",
