--- a/planner/package.json
+++ b/planner/package.json
@@ -7,6 +7,7 @@
     "start": "ts-node-esm src/receive.ts",
     "send": "ts-node-esm src/send.ts",
     "run": "ts-node-esm src/run.ts",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -14,7 +15,8 @@
   "dependencies": {
     "@prisma/client": "^4.11.0",
     "@types/amqplib": "^0.10.1",
-    "amqplib": "^0.10.3"
+    "amqplib": "^0.10.3",
+    "dotenv": "^16.0.3"
   },
   "devDependencies": {
     "@types/node": "^18.15.9",
