--- a/web/summerjob/package.json
+++ b/web/summerjob/package.json
@@ -29,6 +29,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.41.3",
+    "react-select": "^5.7.2",
     "sharp": "^0.31.3",
     "swr": "^2.0.0",
     "ts-node": "^10.9.1",
