--- a/web/summerjob/package.json
+++ b/web/summerjob/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
+    "@types/nodemailer": "^6.4.7",
     "prisma": "^4.11.0"
   }
 }
