--- a/web/summerjob/package.json
+++ b/web/summerjob/package.json
@@ -25,6 +25,8 @@
     "next": "^13.2.4",
     "next-auth": "^4.20.1",
     "nodemailer": "^6.9.1",
+    "pino": "^8.11.0",
+    "pino-pretty": "^10.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.41.3",
