--- a/web/summerjob/package.json
+++ b/web/summerjob/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint",
     "seed-mini": "ts-node --skip-project prisma/seed.ts mini",
     "seed": "ts-node --skip-project prisma/seed.ts",
-    "delete-db": "ts-node --skip-project prisma/drop-tables.ts"
+    "delete-db": "ts-node --skip-project prisma/drop-tables.ts",
+    "create-session": "ts-node --skip-project scripts/create-session.ts",
+    "create-admin": "ts-node --skip-project scripts/create-admin.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
