--- a/web/summerjob/package.json
+++ b/web/summerjob/package.json
@@ -14,6 +14,7 @@
     "create-admin": "ts-node --skip-project scripts/create-admin.ts"
   },
   "dependencies": {
+    "@asteasolutions/zod-to-openapi": "^4.5.3",
     "@hookform/resolvers": "^2.9.10",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.12.0",
@@ -42,6 +43,10 @@
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
     "@types/nodemailer": "^6.4.7",
-    "prisma": "^4.12.0"
+    "@types/swagger-ui-react": "^4.18.0",
+    "encoding": "^0.1.13",
+    "prisma": "^4.12.0",
+    "swagger-ui-react": "^4.18.2",
+    "zod-prisma-types": "^2.5.6"
   }
 }
