--- a/web/summerjob/.env.sample
+++ b/web/summerjob/.env.sample
@@ -4,8 +4,27 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
+# Define the connection string for your database here:
+# DATABASE_URL="postgresql://<db username>:<db password>@<db container name or address>:5432/<db name>?schema=public"
 DATABASE_URL="postgresql://username:password@summerjob-db:5432/summerjob?schema=public"
+
+# Define the email server for sending sign in emails here:
+# EMAIL_SERVER=smtp(s)://<email username>:<email password>@<smtp server>:<port>
 EMAIL_SERVER=smtps://username:password@smtp.example.cz:465
+
+# EMAIL_FROM=Email address used as the sender
 EMAIL_FROM=username@example.cz
-NEXTAUTH_URL="Webserver URL (domain for production, localhost for development)"
-NEXTAUTH_SECRET="A random string used to hash tokens, sign/encrypt cookies and generate cryptographic keys. It should be at least 32 characters long."
+
+# Define the URL of the webserver here (domain for production, localhost for development):
+# NEXTAUTH_URL="https://app.summerjob.eu"
+NEXTAUTH_URL="http://localhost:3000"
+
+# Define the secret used to sign/encrypt cookies. You can generate one using `openssl rand -base64 32`
+NEXTAUTH_SECRET="Replace this with a random string"
+
+# Define the URL of the RabbitMQ server here:
+# RABBITMQ_URL="amqp://<rabbitmq container name or address>"
+AMQP_URL="amqp://summerjob-amqp"
+
+# Name of the queue used for sending plans to planner. You can leave this as is.
+QUEUE_NAME="planner"
