--- a/web/summerjob/Dockerfile.scripts
+++ b/web/summerjob/Dockerfile.scripts
@@ -16,7 +16,9 @@ FROM node:18-alpine AS builder
 WORKDIR /app
 
 COPY --from=deps /app/node_modules ./node_modules
+COPY package.json package-lock.json ./
 COPY ./prisma ./prisma
+COPY ./scripts ./scripts
 COPY .env .env
 
 ENV NEXT_TELEMETRY_DISABLED 1
