--- a/web/package.json
+++ b/web/package.json
@@ -11,7 +11,8 @@
     "seed": "ts-node --skip-project prisma/seed.ts",
     "delete-db": "ts-node --skip-project prisma/drop-tables.ts",
     "create-session": "ts-node --skip-project scripts/create-session.ts",
-    "create-admin": "ts-node --skip-project scripts/create-admin.ts"
+    "create-admin": "ts-node --skip-project scripts/create-admin.ts",
+    "test": "ts-mocha -p 'test/tsconfig.json' 'test/**/*.spec.ts'"
   },
   "dependencies": {
     "@asteasolutions/zod-to-openapi": "^4.5.3",
@@ -42,11 +43,18 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
+    "@types/chai": "^4.3.4",
+    "@types/mocha": "^10.0.1",
     "@types/nodemailer": "^6.4.7",
+    "@types/supertest": "^2.0.12",
     "@types/swagger-ui-react": "^4.18.0",
+    "chai": "^4.3.7",
     "encoding": "^0.1.13",
+    "mocha": "^10.2.0",
     "prisma": "^4.12.0",
+    "supertest": "^6.3.3",
     "swagger-ui-react": "^4.18.2",
+    "ts-mocha": "^10.0.0",
     "zod-prisma-types": "^2.5.6"
   }
 }
