--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -83,6 +83,9 @@ jobs:
 
   build-web-docker:
     name: Build web Docker image
+    strategy:
+      matrix:
+        platform: ["linux/amd64", "linux/arm64/v8"]
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -101,7 +104,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: ./web
-          platforms: linux/amd64,linux/arm64/v8
+          platforms: ${{ matrix.platform }}
           push: false
 
   # build-planner:
