--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -18,16 +18,10 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+        uses: actions/checkout@v3
 
       - name: Log in to the Container registry
-        uses: docker/login-action@v3
+        uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
@@ -35,47 +29,42 @@ jobs:
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
-        uses: docker/metadata-action@v5
+        uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-web
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
         with:
           context: ./web
-          platforms: linux/amd64,linux/arm64/v8
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
-  # build-and-push-planner:
-  #   name: Build and push Planner Docker image
-  #   runs-on: ubuntu-latest
-  #   permissions:
-  #       contents: read
-  #       packages: write
+  download-to-server:
+    name: Download and run Docker image on server
+    runs-on: ubuntu-latest
+    needs: [build-and-push-web]
+    permissions:
+      contents: read
 
-  #   steps:
-  #       - name: Checkout repository
-  #         uses: actions/checkout@v3
+    steps:
+      - name: Configure SSH
+        run: |
+          mkdir -p ~/.ssh/
+          echo "$SSH_KEY" > ~/.ssh/smj.key
+          chmod 600 ~/.ssh/smj.key
+          cat >>~/.ssh/config <<END
+          Host server
+            HostName $SSH_HOST
+            User $SSH_USER
+            IdentityFile ~/.ssh/smj.key
+            StrictHostKeyChecking no
+          END
+        env:
+          SSH_USER: ${{ secrets.SERVER_SSH_USER }}
+          SSH_KEY: ${{ secrets.SERVER_SSH_KEY }}
+          SSH_HOST: ${{ secrets.SERVER_SSH_HOST }}
 
-  #       - name: Log in to the Container registry
-  #         uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
-  #         with:
-  #           registry: ${{ env.REGISTRY }}
-  #           username: ${{ github.actor }}
-  #           password: ${{ secrets.GITHUB_TOKEN }}
-
-  #       - name: Extract metadata (tags, labels) for Docker
-  #         id: meta
-  #         uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
-  #         with:
-  #           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-planner
-
-  #       - name: Build and push Docker image
-  #         uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
-  #         with:
-  #           context: ./planner
-  #           push: true
-  #           tags: ${{ steps.meta.outputs.tags }}
-  #           labels: ${{ steps.meta.outputs.labels }}
+      - name: Run new deployment
+        run: ssh server './deploy.sh'
