--- a/web/package.json
+++ b/web/package.json
@@ -34,7 +34,7 @@
     "husky": "^8.0.3",
     "mime": "^3.0.0",
     "next": "^13.5.6",
-    "next-auth": "^4.24.7",
+    "next-auth": "4.24.5",
     "nodemailer": "^6.9.3",
     "pino": "^8.11.0",
     "pino-pretty": "^10.0.0",
