--- a/web/package.json
+++ b/web/package.json
@@ -33,8 +33,8 @@
     "formidable": "^2.1.2",
     "husky": "^8.0.3",
     "mime": "^3.0.0",
-    "next": "^13.5.6",
-    "next-auth": "4.24.5",
+    "next": "^13.2.4",
+    "next-auth": "^4.20.1",
     "nodemailer": "^6.9.3",
     "pino": "^8.11.0",
     "pino-pretty": "^10.0.0",
