--- a/web/package.json
+++ b/web/package.json
@@ -28,6 +28,7 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "amqplib": "^0.10.3",
+    "date-fns": "^4.1.0",
     "eslint": "8.30.0",
     "eslint-config-next": "14.1.0",
     "formidable": "^3.5.1",
@@ -53,6 +54,7 @@
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
     "@types/chai": "^4.3.4",
+    "@types/date-fns": "^2.5.3",
     "@types/formidable": "^2.0.6",
     "@types/leaflet": "^1.9.8",
     "@types/mime": "^3.0.1",
