--- a/web/package.json
+++ b/web/package.json
@@ -41,6 +41,7 @@
     "pino": "^8.11.0",
     "pino-pretty": "^10.0.0",
     "react": "18.2.0",
+    "react-datepicker": "^8.2.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.41.3",
     "react-leaflet": "^4.2.1",
