--- a/web/package.json
+++ b/web/package.json
@@ -28,6 +28,7 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "amqplib": "^0.10.3",
+    "bcryptjs": "^3.0.2",
     "date-fns": "^4.1.0",
     "eslint": "8.30.0",
     "eslint-config-next": "14.1.0",
